fix text glitching on ios safari

--- a/src/app.css
+++ b/src/app.css
@@ -40,7 +40,7 @@ body {
 
 h1 {
   font-size: 3.2em;
-  /* line-height: 1.1; */
+  line-height: 1.1;
 }
 
 .card {
